# teatop

./: Cargo.toml  README.md  config.example.yaml
src/: config.rs  hooks.rs  lib.rs  main.rs  style.rs  text.rs
src/metrics/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  procdisk.rs  process.rs  procnet.rs  system.rs
src/ui/: braille.rs  corebars.rs  disktable.rs  gauge.rs  mod.rs  nettable.rs  proctable.rs
tests/: basics.rs
