[package]
name = "teatop"
version = "3.0.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["fs", "signal", "user"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_yaml = "0.9.34"
unicode-width = "0.2.2"

# Linux-native backends: /proc parsing, NVIDIA NVML, and rustls for the WAN-IP
# lookup.
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"
nvml-wrapper = "0.12.1"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

# Everywhere else (macOS): the cross-platform sysinfo backend, alongside
# libproc/nettop for the per-process I/O and per-connection bandwidth pages.
# TLS uses the system Security.framework via native-tls rather than pulling
# ring's C sources.
[target.'cfg(not(target_os = "linux"))'.dependencies]
sysinfo = "0.37"
ureq = { version = "3.3.0", default-features = false, features = ["native-tls"] }
